# mocap

./: CMakeLists.txt  README.md  package.xml
include/mocap/: GHKFilter.h  attitude_ekf.h  body.h  client.h  defines.h  mocap.h  rpc_client.h  tf2_helpers.h  utils.h
include/mocap/client/: optitrack.h  vicon.h
launch/: optitrack.launch.xml  vicon.launch.xml
matlab/: attEkf.m  ghkFilter.m  parseData.m  posGHK.m  processModel.m  rk4.m  runFilters.m  runghk.m  transitionMatrix.m
msg/: Camera.msg  Cameras.msg  Centroid.msg  Marker.msg  Markers.msg  Status.msg
nodes/: from_rpc.py  process_bag.py  spoof_rigid_body.py
param/: vicon.yaml
scripts/: vicon_optitrack_comparison.py
sdk/optitrack/: CMakeLists.txt  optitrack_client.cpp  udp_socket.cpp
sdk/optitrack/optitrack_sdk/: optitrack_client.h
sdk/vicon/: CMakeLists.txt  expose_receive_pkt_time.patch  notes.txt
src/: GHKFilter.cpp  attitude_ekf.cpp  body.cpp  mocap.cpp  mocap_node.cpp  rpc_client.cpp  test_vicon_rpc_node.cpp
src/client/: optitrack.cpp  vicon.cpp
util/: vicon_filter_test.py  vicon_rpc_client.py  vicon_rpc_server.py
