<?xml version="1.0"?>
<package format="3">
  <name>mocap</name>
  <version>0.0.0</version>
  <description>Filters and ROS2 drivers for motion capture systems</description>

  <maintainer email="kkondo@mit.edu">Kota Kondo</maintainer>
  <author email="plusk@mit.edu">Parker Lusk</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Build dependencies -->
  <depend>rosidl_default_generators</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>

  <!-- Message runtime for generated messages -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>rosidl_default_runtime</depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
